[gd_scene load_steps=3 format=3 uid="uid://tile123456"]

[ext_resource type="Script" path="res://src/Scripts/Tile.gd" id="1_tile"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tile"]
size = Vector2(58, 58)

[node name="Tile" type="Node2D"]
script = ExtResource("1_tile")

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -29.0
offset_top = -29.0
offset_right = 29.0
offset_bottom = 29.0
color = Color(0.188235, 0.188235, 0.270588, 1)

[node name="Label" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
horizontal_alignment = 1

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_tile")

[connection signal="input_event" from="Area2D" to="." method="_on_area_2d_input_event"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
